src/test/ui/object-safety-generics.stderr
error[E0038]: the trait `Bar` cannot be made into an object
  --> $DIR/object-safety-generics.rs:24:1
   |
24 | fn make_bar<T:Bar>(t: &T) -> &Bar {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Bar` cannot be made into an object
   |
   = note: method `bar` has generic type parameters

error[E0038]: the trait `Bar` cannot be made into an object
  --> $DIR/object-safety-generics.rs:31:1
   |
31 | fn make_bar_explicit<T:Bar>(t: &T) -> &Bar {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Bar` cannot be made into an object
   |
   = note: method `bar` has generic type parameters

error: aborting due to 2 previous errors

